syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/type.proto";

option csharp_namespace = "AElf.Contracts.EvidenceContract";

service EvidenceContract {
    option (aelf.csharp_state) = "AElf.Contracts.EvidenceContract.EvidenceContractState";

    // Actions
    rpc FilesToHash (FileReceived) returns (google.protobuf.Empty) { }
    rpc VerifyFiles (aelf.Hash) returns (VerifyAnswer) { }
    
}

message FileReceived{
    aelf.Hash id = 1;
    string fileName = 2;
    bytes fileByte = 3;
    sint32 fileSize = 4;
    google.protobuf.Timestamp saveTime = 5;
}

message VerifyAnswer{
    bytes fileAnswer= 1;
    bool IsSame = 2;
}